Fix Background overlapping issue

--- a/src/components/HeroSection/HeroSection.module.css
+++ b/src/components/HeroSection/HeroSection.module.css
@@ -27,8 +27,7 @@
 
 .heroBg {
      position: relative;
-     width: 100%;
-     height: 100%;
+     z-index: -10;
 }
 
 @media screen and (max-width: 950px) {
