--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -29,10 +29,13 @@
 
 html,
 body {
-  background: var(--color-dark);
   color: var(--color-text-light);
   padding: 0;
   margin: 0;
+}
+
+body {
+  background: var(--color-dark);
 }
 
 a {
